<resources>
    <string name="app_name">SlotTDD</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_button_start">Empezar</string>
    <string name="home_button_settings">Ajustes</string>

    <string name="slot_button_free_coins">Fichas gratis</string>
    <string name="slot_button_spin">Jugar</string>
    <string name="slot_checkbot_autoplay">Automático</string>
    <string name="slot_button_max_bet">Apuesta max</string>
    <string name="slot_textview_bet">Apuesta</string>
    <string name="slot_textview_win">Ganado</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>