<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenters.home.slot.SlotActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_controller_top"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FFFFFF"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <Button
            android:id="@+id/button_free_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/slot_button_free_coins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_button_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <TextView
            android:id="@+id/textInputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:drawableStart="@android:drawable/btn_star"
            android:gravity="center"
            android:text="150.000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_controller_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_controller_top">

        <LinearLayout
            android:id="@+id/layout_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/button_spin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/slot_button_spin"
            app:layout_constraintEnd_toStartOf="@+id/checkbox_auto_spin"
            app:layout_constraintStart_toStartOf="@+id/layout_slot"
            app:layout_constraintTop_toBottomOf="@+id/layout_slot" />

        <CheckBox
            android:id="@+id/checkbox_auto_spin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_checkbot_autoplay"
            app:layout_constraintBottom_toBottomOf="@+id/button_spin"
            app:layout_constraintEnd_toEndOf="@+id/layout_slot"
            app:layout_constraintStart_toEndOf="@+id/button_spin"
            app:layout_constraintTop_toTopOf="@+id/button_spin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_controller_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E9F0F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_win_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingBottom="12dp"
            android:text="500.000"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_win_name"
            app:layout_constraintStart_toStartOf="@+id/tv_win_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_win_name" />

        <TextView
            android:id="@+id/tv_win_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/slot_textview_win"
            android:textColor="#009688"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bet_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_bet_name" />

        <TextView
            android:id="@+id/tv_bet_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingBottom="12dp"
            android:text="2.000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_bet_name"
            app:layout_constraintStart_toStartOf="@+id/tv_bet_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_bet_name" />

        <TextView
            android:id="@+id/tv_bet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:text="@string/slot_textview_bet"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_bet_value"
            app:layout_constraintEnd_toStartOf="@+id/tv_win_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button_max_bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/slot_button_max_bet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>